--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,15 +104,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Index(['humidity', 'rainfall_mm', 'wind_speed_kph', 'city_Hanoi',\n",
-      "       'city_Ho Chi Minh City', 'temp_c'],\n",
+      "Index(['humidity', 'rainfall_mm', 'wind_speed_kph', 'day', 'month', 'weekday',\n",
+      "       'city_Hanoi', 'city_Ho Chi Minh City', 'temp_c'],\n",
       "      dtype='object')\n"
      ]
     },
